# EnvRequestHandler

./: app.py  email_service.py  fallback_articles.json  gamification_service.py  mood_service.py  news_service.py  pyproject.toml  render.yaml  replit.md  requirements.txt  summarizer_service.py  user_progress.json
attached_assets/: _1752839708809.env  mail_1752839708811.py
static/css/: custom.css
static/js/: app.js
templates/: base.html  config.html  dashboard.html  learning.html  mood.html
